--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </ul>
   </nav>
   <section class="livros wrap" id="livros">
-    <!-- <div class="livro">
+    <!-- 
+    <div class="livro">
       <img class="livro__imagens" src="imagens/Cangaceiro-Javascript.png" alt="Capa do livro Cangaceiro JavaScript" />
       <h2 class="livro__titulo">
         Cangaceiro JavaScript:
@@ -274,6 +275,8 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
   <script src="app/main.js"></script>
+  <script src="app/forEach.js"></script>
+  <script src="app/map.js"></script>
 </body>
 
 </html>
