--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
   <script src="app/map.js"></script>
   <script src="app/filter.js"></script>
   <script src="app/sortPrice.js"></script>
+  <script src="app/reduce.js"></script>
 </body>
 
 </html>
